# Ragchatbot-codebase

./: .editorconfig  .gitignore  .quality-tools-quick-ref.md  CLAUDE.md  Makefile  QUALITY.md  format.sh  frontend-changes.md  lint.sh  pyproject.toml  quality-check.sh
backend/: ai_generator.py  app.py  search_tools.py  vector_store.py
backend/tests/: __init__.py  conftest.py  test_ai_generator.py  test_api_endpoints.py  test_rag_pipeline.py  test_search_tools.py
frontend/: index.html  script.js  style.css
